--- a/app/views/users/file_show.html.erb
+++ b/app/views/users/file_show.html.erb
@@ -1,22 +1,22 @@
 
 <div class="text-center">
-  <h1 class="title_font text-primary">提出した書類</h1>
-  <div class="text-left"><%= link_to "戻る",user_documets_path(@user),class:"btn btn-default",style:"width:20%;" %></div>
+  <h1 class="title_font dk_h1" style="color:#808000;">提出した書類</h1>
+  <div class="text-left"><%= link_to "戻る",user_documets_path(@user),class:"btn btn-default document_btn_pc8",style:"width:20%;" %></div>
    <div style="border-top:1px dotted #c0c0c0;">
 </div>  
  
  <div class="text-right title_font"><%= "#{@user.name}さん提出"%></div>
- <div class="row">
+ <div class="row" style="background:#F0FFFF;box-shadow:0.5px 2px 3px 2px #696969">
    <div class="col-md-10 col-md-offset-1">
-     <div class="document_user_submit_title text-left title_font">
-        タイトル:<span style="color:red"><%= @document.title%></span>
+     <div class="document_user_submit_title title_font">
+        タイトル:<%= @document.title%>
      </div><br>
      <div class="text-left text-primary title_font">質問と回答</div>
 
-     <table class="table table-responsive" style="border:1px solid #c0c0c0;">
+     <table class="table table-responsive dk_tv" style="border:1px solid #c0c0c0;">
       <% @count.times do |i| %>
         <thead>
-          <th style="background-color:orange"><span style="color:red">質問:</span><%= @items[i].content %></th>
+          <th style="background-color:#FFCC00"><span style="color:red">質問:</span><%= @items[i].content %></th>
         </thead>
         <tbody>
           <td style="text-align:left" class="title_font">
@@ -28,7 +28,24 @@
      </table>
    </div>
  </div>
-  
+ <%= link_to "戻る",user_documets_path(@user),class:"btn btn-default document_btn_phone8",style:"width:100%;margin-top:5%;" %>
+ <style>
+   body{
+     background:#FFDBC9;
+   }
+   .dk_tv{
+     background:#FFFFF0;
+   }
+   .col-md-10{
+     margin-top:8%;
+   }
+   .document_btn_phone8{display:none;}
+   @media screen and (max-width:767px){
+     .document_btn_pc8{display: none;}
+     .document_btn_phone8{display:block;}
+     .dk_h1{font-size:26px;}
+   }
+ </style> 
 
 
 
