--- a/app/assets/stylesheets/document_items.scss
+++ b/app/assets/stylesheets/document_items.scss
@@ -22,28 +22,17 @@
  }
 /*   user     */
 #document_user_table{
-    th{
-        background: #febf01; 
-        background: -moz-linear-gradient(top,  #febf01 0%, #febf01 100%); 
-        background: -webkit-linear-gradient(top,  #febf01 0%,#febf01 100%); 
-        background: linear-gradient(to bottom,  #febf01 0%,#febf01 100%);
-        border: 1px solid black;
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febf01', endColorstr='#febf01',GradientType=0 );
-    }
-    td{border: 1px solid black;font-weight: bold;}
+    background-color:#fff;
+    th{background-color: orange;}
+}
+#document_user_table_phone{
+    display: none;
 }
 /*提出物期限案内分岐*/
 #document_users_span{
-    background: rgb(255,48,25);
-    background: -moz-linear-gradient(top,  rgba(255,48,25,1) 0%, rgba(207,4,4,1) 30%, rgba(207,4,4,1) 30%);
-    background: -webkit-linear-gradient(top,  rgba(255,48,25,1) 0%,rgba(207,4,4,1) 30%,rgba(207,4,4,1) 30%);
-    background: linear-gradient(to bottom,  rgba(255,48,25,1) 0%,rgba(207,4,4,1) 30%,rgba(207,4,4,1) 30%);
-    box-shadow: 3px 3px 3px cyan;
-   
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 );
+    background-color: red;
+    padding: 2px 6px;
     color: #fff;
-    font-weight: bold;
-    padding: 6px;
 
 
 }
@@ -117,6 +106,16 @@
      }
      #item_flash{
          width: 100%;
+     }
+     #document_user_table{
+       display: none;
+    }
+     #document_user_table_phone{
+         display: table;
+         th{background-color: orange;}
+         td{
+             vertical-align: middle;
+         }
      }
     
 }
