--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -4,7 +4,7 @@
 
 
 .title_font,.document_label{
-    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'M PLUS Rounded 1c';
     font-weight: bold;
     margin-top: 2%;
 }
