保護者新規・編集、生徒新規・編集のエラーメッセージの日本語化

--- a/app/views/shared/_child_error_messages.html.erb
+++ b/app/views/shared/_child_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if @child.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@child.errors.count, "error") %>.
+      入力エラーが <%= pluralize(@child.errors.count, "件あります。") %>
     </div>
     <ul>
     <% @child.errors.full_messages.each do |msg| %>
