--- a/app/views/teachers/show2.html.erb
+++ b/app/views/teachers/show2.html.erb
@@ -33,7 +33,7 @@
   </table>
 </div>
 
-<div id="submit-center">
+<div id="submit-center" style="margin-top: 5%;">
   <%= link_to "一覧に戻る", teacher_teacher_index2_path(@teacher), class: "btn btn-default submit-single" %>
 </div>
 
