--- a/app/views/teachers/t_message_reply.html.erb
+++ b/app/views/teachers/t_message_reply.html.erb
@@ -22,7 +22,9 @@
 <script>
 
   $(function(){
-    jQuery("#form_1").validationEngine();
+    jQuery("#form_1").validationEngine('attach', {
+      promptPosition: "topRight: -70" //アラートの吹き出し位置調整
+    });
   });
 
 </script>
