--- a/app/views/document_items/_second_select.html.erb
+++ b/app/views/document_items/_second_select.html.erb
@@ -7,20 +7,26 @@
       </button>
     </div>
     <div class="modal-body">
-      <div class="row">
+      <div class="row" style="background:#fff;">
         <div class="col-md-5">
             <ul style="list-style:none">
-              <li><%= image_tag("/explain/modal/img8.png",style:"width:100%;") %></li>
-              <li><%= image_tag("/explain/modal/img3.png",style:"width:100%;") %></li>
-            </ul>
+              <li><%= image_tag("/explain/modal/select05.png",style:"width:100%;margin-top:5%;height:150px;") %></li>
         </div>
         <div class="col-md-2"><br>
-          <h1 syle="font-size:20px:">&emsp;➔</h1>
+          <h1 syle="font-size:20px:" class="modal_h1_pc">&emsp;➔</h1>
+          <span syle="font-size:90px:" class="modal_h1_phone">&emsp;↓</span>
           <label class="text-primary">どのような選択をしてもらうかの説明を作成します。</label>
         </div>
-        <div class="col-md-5"><%= image_tag("/explain/modal/img02.png",style:"width:100%;") %></div>
+        <div class="col-md-5"><%= image_tag("/explain/modal/select03.png",style:"width:100%;") %></div>
       </div>
     </div>
-    <div class="text-danger text-center" style="font-size:28px;"><label>赤い枠の部分を作成します。</label></div>
+    <div class="text-danger text-center" style="font-size:24px;"><label>青い矢印の部分を作成します。</label></div>
   </div>
 </div>
+<style>
+.modal_h1_phone{display:none;}
+@media screen and (max-width: 815px){
+  .modal_h1_pc{display: none;}
+  .modal_h1_phone{display:block;margin-left:45%;}
+}
+</style>
