--- a/app/views/documents/_first_input.html.erb
+++ b/app/views/documents/_first_input.html.erb
@@ -6,17 +6,25 @@
           <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="modal-body">
-      <div class="row">
-        <div class="col-md-5"><%= image_tag("/explain/modal/img10.png",style:"width:100%;") %></div>
+    <div class="modal-body" >
+      <div class="row" style="background:#c0c0c0">
+        <div class="col-md-5"><%= image_tag("/explain/modal/input01.png",style:"width:100%;margin-top:3%;") %></div>
         <div class="col-md-1"><br>
-          <h1 syle="font-size:20px:">&emsp;➔</h1>
+          <h1 syle="font-size:30px:" class="modal_h1_pc"><i class="fas fa-arrow-right"></i></h1>
+          <span syle="font-size:24px:" class="modal_h1_phone"><i class="fas fa-arrow-down"></i></span>
           <label class="text-primary">書類のタイトルと本体の作成です。</label>
         </div>
-        <div class="col-md-5"><%= image_tag("/explain/modal/img10.png",style:"width:100%;") %></div>
+        <div class="col-md-5"><%= image_tag("/explain/modal/input02.png",style:"width:100%;margin-top:3%;height:250px;") %></div>
       </div>
     </div>
-    <div class="text-danger text-center" style="font-size:28px;"><label>赤い枠の部分を作成します。</label></div>
+    <div class="text-danger text-center" style="font-size:28px;"><label>矢印の部分を作成します。</label></div>
   </div>
   </div>
 </div>
+<style>
+.modal_h1_phone{display:none;}
+@media screen and (max-width: 815px){
+  .modal_h1_pc{display: none;}
+  .modal_h1_phone{display:block;margin-left:45%;}
+}
+</style>
