教員ログインcss修正

--- a/app/views/documents/_pdf.html.erb
+++ b/app/views/documents/_pdf.html.erb
@@ -7,9 +7,9 @@
       </button>
     </div>
     <div class="modal-body">
-      <h1>ここは保護者表示式レイアウト完成したら配置します</h1>
+      <h5>このページでは表示式の書類を作成します。</h5>
+      <div class="text-danger text-center" style="font-size:12px;"><label>出来上がる書類</label></div>
+     <%= image_tag("/explain/modal/pdf.png",style:"width:100%;") %>
     </div>
-    <div class="text-danger text-center" style="font-size:28px;"><label>赤い枠の部分を作成します。</label></div>
   </div>
   </div>
-</div>
