--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -149,7 +149,7 @@
       <% end %>
   </div>
 </div>
-<%= link_to "メニューへ","/teachers/1",class:"btn btn-default btn-block document_index_back_btn2_phone" %><br><br>
+<%= link_to "メニューへ","/teachers/1",class:"btn btn-info btn-block document_index_back_btn2_phone" %><br><br>
 <script>
   $(function(){
      $("#document_line").modal("show");
