--- a/app/views/document_selects/_third_select.html.erb
+++ b/app/views/document_selects/_third_select.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-dialog modal-lg">
+<div class="modal-dialog modal-lg" style="max-width:100%;">
   <div class="modal-content">
     <div class="modal-header">
       <div class="text-center">このページの説明</div>
